--- a/vignettes/Output_dictionary.Rmd
+++ b/vignettes/Output_dictionary.Rmd
@@ -60,6 +60,9 @@ cases
 deaths
   : Number of malaria deaths. The 95% uncertainty intervals are denoted by _lower and _upper suffixes.
   
+y
+  : Equally weighted sum of cases and deaths. Used in the optimisation.
+  
 life_years
   : Life years lived. The 95% uncertainty intervals are denoted by _lower and _upper suffixes.
   
@@ -84,8 +87,14 @@ net_coverage
   : This is net usage, the effective coverage of nets within the population (
   not distribution coverage or ownership).
   
+net_n
+  : Number of nets.
+  
 irs_coverage
   : The proportion of the population protected by indoor residual spraying.
+  
+irs_hh
+  : Number of households covered by IRS.
   
 vector_control_coverage
   : The proportion of the population protected by any vector control (net or IRS).
