--- a/inst/country_report.Rmd
+++ b/inst/country_report.Rmd
@@ -420,7 +420,7 @@ smc <- comp %>%
   mutate(smc_children = smc_coverage * par) %>%
   select(ISO, year, pre, replenishment, post, smc_children, smc_child_n) %>%
   rename(Out = smc_children, In = smc_child_n) %>%
-  pivot_longer(-c(ISO, year, pre, replenishment, post), names_to = "d", values_to = "llins") %>%
+  pivot_longer(-c(ISO, year, pre, replenishment, post), names_to = "d", values_to = "smc") %>%
   filter(replenishment == 1)
 
 ggplot(smc, aes(x = year, y = smc, fill = d)) + 
